# Rust-DB

./: Cargo.toml  PANOPTICON_COMPAT.md  PRODUCTION_READINESS_ANALYSIS.md  README.md  pyproject.toml
frontend/: app.js  index.html  style.css
gui/src-tauri/: tauri.conf.json
gui/src-tauri/src/: lib.rs
schemas/: panopticon.sql
src/: config.rs  lib.rs  tls.rs
src/auth/: mod.rs
src/backup/: checkpoint.rs  manager.rs
src/engine/: catalog.rs  mod.rs  snapshot.rs  wal.rs
src/net/: mod.rs  pgwire_adapter.rs  sim_network.rs  transport.rs
src/python/: mod.rs  query.rs  types.rs
src/query/: builder.rs  executor.rs  expr.rs  mod.rs  plan.rs  sql.rs
src/raft/: log.rs  mod.rs  server.rs  store.rs
src/sim/: buggify.rs  bus.rs  clock.rs  disk.rs  fault.rs  mod.rs  rng.rs
src/storage/: btree.rs  buffer_pool.rs  mod.rs  page.rs  page_alloc.rs  types.rs
src/traits/: io.rs  message.rs  mod.rs  state_machine.rs
src/txn/: conflict.rs  manager.rs  mod.rs  mvcc.rs
src/wal/: reader.rs  writer.rs
src/web/: metrics.rs  mod.rs
tests/: auth_tests.rs  backup_tests.rs  config_tests.rs  engine_tests.rs  helpers.rs  index_tests.rs  meta_tests.rs  network_tests.rs  panopticon_schema_test.rs  pgwire_tests.rs  query_tests.rs  raft_tests.rs  sim_tests.rs  skeleton.rs  storage_tests.rs  tls_integration.rs  txn_tests.rs  wal_tests.rs  web_tests.rs
tests/python/: test_query.py
