[package]
name = "rust-dst-db"
version = "0.2.0"
edition = "2024"

[lib]
name = "rust_dst_db"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-db-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
pgwire = ["dep:pgwire", "dep:tokio", "dep:async-trait", "dep:futures"]
python = ["dep:pyo3"]
server = ["pgwire", "dep:tracing", "dep:tracing-subscriber", "dep:clap"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
crc32fast = "1"
bytes = "1"
sqlparser = "0.53"
pgwire      = { version = "0.26", optional = true }
tokio       = { version = "1",    features = ["full"], optional = true }
async-trait = { version = "0.1",  optional = true }
futures     = { version = "0.3",  optional = true }
tracing            = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap               = { version = "4",   features = ["derive"], optional = true }
